--- a/trunk/plugins/_core/logindlgbase.ui
+++ b/trunk/plugins/_core/logindlgbase.ui
@@ -6,49 +6,49 @@
         <name>name</name>
         <cstring>Login</cstring>
     </property>
-    <property>
+    <property stdset="1">
         <name>geometry</name>
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>365</width>
-            <height>194</height>
+            <width>485</width>
+            <height>207</height>
         </rect>
     </property>
-    <property>
+    <property stdset="1">
         <name>caption</name>
         <string>Login</string>
     </property>
-    <property>
+    <property stdset="1">
         <name>sizeGripEnabled</name>
         <bool>true</bool>
     </property>
-    <vbox>
-        <property>
+    <grid>
+        <property stdset="1">
             <name>margin</name>
             <number>11</number>
         </property>
-        <property>
+        <property stdset="1">
             <name>spacing</name>
             <number>6</number>
         </property>
-        <widget>
+        <widget row="0"  column="0" >
             <class>QLabel</class>
             <property stdset="1">
                 <name>name</name>
                 <cstring>lblMessage</cstring>
             </property>
-            <property>
+            <property stdset="1">
                 <name>font</name>
                 <font>
                     <bold>1</bold>
                 </font>
             </property>
-            <property>
+            <property stdset="1">
                 <name>text</name>
                 <string></string>
             </property>
-            <property>
+            <property stdset="1">
                 <name>alignment</name>
                 <set>AlignCenter</set>
             </property>
@@ -56,165 +56,38 @@
                 <name>hAlign</name>
             </property>
         </widget>
-        <widget>
-            <class>QLayoutWidget</class>
-            <property stdset="1">
-                <name>name</name>
-                <cstring>PLayout</cstring>
-            </property>
-            <grid>
-                <property>
-                    <name>margin</name>
-                    <number>0</number>
-                </property>
-                <property>
-                    <name>spacing</name>
-                    <number>6</number>
-                </property>
-                <spacer row="1"  column="2" >
-                    <property>
-                        <name>name</name>
-                        <cstring>Spacer3</cstring>
-                    </property>
-                    <property>
-                        <name>orientation</name>
-                        <enum>Horizontal</enum>
-                    </property>
-                    <property>
-                        <name>sizeType</name>
-                        <enum>Expanding</enum>
-                    </property>
-                    <property>
-                        <name>sizeHint</name>
-                        <size>
-                            <width>20</width>
-                            <height>20</height>
-                        </size>
-                    </property>
-                </spacer>
-                <widget row="1"  column="1" >
-                    <class>QLabel</class>
-                    <property stdset="1">
-                        <name>name</name>
-                        <cstring>lblPasswd</cstring>
-                    </property>
-                    <property>
-                        <name>text</name>
-                        <string>Passwords:</string>
-                    </property>
-                    <property>
-                        <name>alignment</name>
-                        <set>AlignVCenter|AlignLeft</set>
-                    </property>
-                    <property>
-                        <name>hAlign</name>
-                    </property>
-                </widget>
-                <widget row="0"  column="0" >
-                    <class>QLabel</class>
-                    <property stdset="1">
-                        <name>name</name>
-                        <cstring>TextLabel1</cstring>
-                    </property>
-                    <property>
-                        <name>text</name>
-                        <string></string>
-                    </property>
-                </widget>
-                <widget row="0"  column="1"  rowspan="1"  colspan="2" >
-                    <class>QLayoutWidget</class>
-                    <property stdset="1">
-                        <name>name</name>
-                        <cstring>Layout6</cstring>
-                    </property>
-                    <hbox>
-                        <property>
-                            <name>margin</name>
-                            <number>0</number>
-                        </property>
-                        <property>
-                            <name>spacing</name>
-                            <number>6</number>
-                        </property>
-                        <widget>
-                            <class>QLabel</class>
-                            <property stdset="1">
-                                <name>name</name>
-                                <cstring>lblProfile</cstring>
-                            </property>
-                            <property>
-                                <name>text</name>
-                                <string>Profile:</string>
-                            </property>
-                            <property>
-                                <name>alignment</name>
-                                <set>AlignVCenter|AlignRight</set>
-                            </property>
-                            <property>
-                                <name>hAlign</name>
-                            </property>
-                        </widget>
-                        <widget>
-                            <class>QComboBox</class>
-                            <property stdset="1">
-                                <name>name</name>
-                                <cstring>cmbProfile</cstring>
-                            </property>
-                            <property>
-                                <name>sizePolicy</name>
-                                <sizepolicy>
-                                    <hsizetype>7</hsizetype>
-                                    <vsizetype>0</vsizetype>
-                                </sizepolicy>
-                            </property>
-                        </widget>
-                        <widget>
-                            <class>QPushButton</class>
-                            <property stdset="1">
-                                <name>name</name>
-                                <cstring>btnDelete</cstring>
-                            </property>
-                            <property>
-                                <name>text</name>
-                                <string>&amp;Delete</string>
-                            </property>
-                        </widget>
-                    </hbox>
-                </widget>
-            </grid>
-        </widget>
-        <widget>
+        <widget row="2"  column="0" >
             <class>QCheckBox</class>
             <property stdset="1">
                 <name>name</name>
                 <cstring>chkSave</cstring>
             </property>
-            <property>
+            <property stdset="1">
                 <name>text</name>
                 <string>&amp;Save password</string>
             </property>
         </widget>
-        <widget>
+        <widget row="3"  column="0" >
             <class>QCheckBox</class>
             <property stdset="1">
                 <name>name</name>
                 <cstring>chkNoShow</cstring>
             </property>
-            <property>
+            <property stdset="1">
                 <name>text</name>
                 <string>&amp;Do not show this window on startup</string>
             </property>
         </widget>
-        <spacer>
+        <spacer row="4"  column="0" >
             <property>
                 <name>name</name>
                 <cstring>Spacer2</cstring>
             </property>
-            <property>
+            <property stdset="1">
                 <name>orientation</name>
                 <enum>Vertical</enum>
             </property>
-            <property>
+            <property stdset="1">
                 <name>sizeType</name>
                 <enum>Expanding</enum>
             </property>
@@ -226,18 +99,18 @@
                 </size>
             </property>
         </spacer>
-        <widget>
+        <widget row="5"  column="0" >
             <class>QLayoutWidget</class>
             <property stdset="1">
                 <name>name</name>
                 <cstring>Layout5</cstring>
             </property>
             <hbox>
-                <property>
+                <property stdset="1">
                     <name>margin</name>
                     <number>0</number>
                 </property>
-                <property>
+                <property stdset="1">
                     <name>spacing</name>
                     <number>6</number>
                 </property>
@@ -246,11 +119,11 @@
                         <name>name</name>
                         <cstring>Horizontal Spacing2</cstring>
                     </property>
-                    <property>
+                    <property stdset="1">
                         <name>orientation</name>
                         <enum>Horizontal</enum>
                     </property>
-                    <property>
+                    <property stdset="1">
                         <name>sizeType</name>
                         <enum>Expanding</enum>
                     </property>
@@ -268,15 +141,15 @@
                         <name>name</name>
                         <cstring>buttonOk</cstring>
                     </property>
-                    <property>
+                    <property stdset="1">
                         <name>text</name>
                         <string>&amp;OK</string>
                     </property>
-                    <property>
+                    <property stdset="1">
                         <name>autoDefault</name>
                         <bool>true</bool>
                     </property>
-                    <property>
+                    <property stdset="1">
                         <name>default</name>
                         <bool>true</bool>
                     </property>
@@ -287,18 +160,156 @@
                         <name>name</name>
                         <cstring>buttonCancel</cstring>
                     </property>
-                    <property>
+                    <property stdset="1">
                         <name>text</name>
                         <string>&amp;Cancel</string>
                     </property>
-                    <property>
+                    <property stdset="1">
                         <name>autoDefault</name>
                         <bool>true</bool>
                     </property>
                 </widget>
             </hbox>
         </widget>
-    </vbox>
+        <widget row="1"  column="0" >
+            <class>QLayoutWidget</class>
+            <property stdset="1">
+                <name>name</name>
+                <cstring>PLayout</cstring>
+            </property>
+            <grid>
+                <property stdset="1">
+                    <name>margin</name>
+                    <number>0</number>
+                </property>
+                <property stdset="1">
+                    <name>spacing</name>
+                    <number>6</number>
+                </property>
+                <widget row="0"  column="0" >
+                    <class>QLabel</class>
+                    <property stdset="1">
+                        <name>name</name>
+                        <cstring>TextLabel1</cstring>
+                    </property>
+                    <property stdset="1">
+                        <name>text</name>
+                        <string></string>
+                    </property>
+                </widget>
+                <widget row="1"  column="1" >
+                    <class>QLabel</class>
+                    <property stdset="1">
+                        <name>name</name>
+                        <cstring>lblPasswd</cstring>
+                    </property>
+                    <property stdset="1">
+                        <name>text</name>
+                        <string>Passwords:</string>
+                    </property>
+                    <property stdset="1">
+                        <name>alignment</name>
+                        <set>AlignVCenter|AlignLeft</set>
+                    </property>
+                    <property>
+                        <name>hAlign</name>
+                    </property>
+                </widget>
+                <widget row="0"  column="1"  rowspan="1"  colspan="2" >
+                    <class>QLayoutWidget</class>
+                    <property stdset="1">
+                        <name>name</name>
+                        <cstring>Layout5</cstring>
+                    </property>
+                    <hbox>
+                        <property stdset="1">
+                            <name>margin</name>
+                            <number>0</number>
+                        </property>
+                        <property stdset="1">
+                            <name>spacing</name>
+                            <number>6</number>
+                        </property>
+                        <widget>
+                            <class>QLabel</class>
+                            <property stdset="1">
+                                <name>name</name>
+                                <cstring>lblProfile</cstring>
+                            </property>
+                            <property stdset="1">
+                                <name>text</name>
+                                <string>Profile:</string>
+                            </property>
+                            <property stdset="1">
+                                <name>alignment</name>
+                                <set>AlignVCenter|AlignRight</set>
+                            </property>
+                            <property>
+                                <name>hAlign</name>
+                            </property>
+                        </widget>
+                        <widget>
+                            <class>QComboBox</class>
+                            <property stdset="1">
+                                <name>name</name>
+                                <cstring>cmbProfile</cstring>
+                            </property>
+                            <property stdset="1">
+                                <name>sizePolicy</name>
+                                <sizepolicy>
+                                    <hsizetype>7</hsizetype>
+                                    <vsizetype>0</vsizetype>
+                                </sizepolicy>
+                            </property>
+                        </widget>
+                        <widget>
+                            <class>QPushButton</class>
+                            <property stdset="1">
+                                <name>name</name>
+                                <cstring>btnRename</cstring>
+                            </property>
+                            <property stdset="1">
+                                <name>text</name>
+                                <string>&amp;Rename</string>
+                            </property>
+                        </widget>
+                        <widget>
+                            <class>QPushButton</class>
+                            <property stdset="1">
+                                <name>name</name>
+                                <cstring>btnDelete</cstring>
+                            </property>
+                            <property stdset="1">
+                                <name>text</name>
+                                <string>&amp;Delete</string>
+                            </property>
+                        </widget>
+                    </hbox>
+                </widget>
+                <spacer row="1"  column="2" >
+                    <property>
+                        <name>name</name>
+                        <cstring>Spacer3</cstring>
+                    </property>
+                    <property stdset="1">
+                        <name>orientation</name>
+                        <enum>Horizontal</enum>
+                    </property>
+                    <property stdset="1">
+                        <name>sizeType</name>
+                        <enum>Expanding</enum>
+                    </property>
+                    <property>
+                        <name>sizeHint</name>
+                        <size>
+                            <width>20</width>
+                            <height>20</height>
+                        </size>
+                    </property>
+                </spacer>
+            </grid>
+        </widget>
+    </grid>
 </widget>
 <connections>
     <connection>
