--- a/branches/branch-playground/plugins/yahoo/yahoosearchbase.ui
+++ b/branches/branch-playground/plugins/yahoo/yahoosearchbase.ui
@@ -1,7 +1,8 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>YahooSearchBase</class>
- <widget class="QWidget" name="YahooSearchBase" >
-  <property name="geometry" >
+ <widget class="QWidget" name="YahooSearchBase">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -9,120 +10,105 @@
     <height>403</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>Form1</string>
   </property>
-  <layout class="QVBoxLayout" >
-   <property name="spacing" >
-    <number>6</number>
-   </property>
-   <property name="margin" >
+  <layout class="QVBoxLayout">
+   <property name="margin">
     <number>0</number>
    </property>
    <item>
-    <widget class="QWidget" native="1" name="grpID" >
-     <property name="title" stdset="0" >
+    <widget class="QWidget" name="grpID" native="true">
+     <property name="title" stdset="0">
       <string>Yahoo! &amp;ID</string>
      </property>
-     <layout class="QVBoxLayout" >
-      <property name="spacing" >
-       <number>6</number>
-      </property>
-      <property name="margin" >
+     <layout class="QVBoxLayout">
+      <property name="margin">
        <number>11</number>
       </property>
       <item>
-       <widget class="QLineEdit" name="edtID" />
+       <widget class="QLineEdit" name="edtID"/>
       </item>
      </layout>
     </widget>
    </item>
    <item>
-    <widget class="QWidget" native="1" name="grpName" >
-     <property name="title" stdset="0" >
+    <widget class="QWidget" name="grpName" native="true">
+     <property name="title" stdset="0">
       <string>&amp;Name</string>
      </property>
-     <layout class="QVBoxLayout" >
-      <property name="spacing" >
-       <number>6</number>
-      </property>
-      <property name="margin" >
+     <layout class="QVBoxLayout">
+      <property name="margin">
        <number>11</number>
       </property>
       <item>
-       <widget class="QLineEdit" name="edtName" />
+       <widget class="QLineEdit" name="edtName"/>
       </item>
      </layout>
     </widget>
    </item>
    <item>
-    <widget class="QWidget" native="1" name="grpKeyword" >
-     <property name="title" stdset="0" >
+    <widget class="QWidget" name="grpKeyword" native="true">
+     <property name="title" stdset="0">
       <string>&amp;Keyword</string>
      </property>
-     <layout class="QVBoxLayout" >
-      <property name="spacing" >
-       <number>6</number>
-      </property>
-      <property name="margin" >
+     <layout class="QVBoxLayout">
+      <property name="margin">
        <number>11</number>
       </property>
       <item>
-       <widget class="QLineEdit" name="edtKeyword" />
+       <widget class="QLineEdit" name="edtKeyword"/>
       </item>
      </layout>
     </widget>
    </item>
    <item>
-    <widget class="Q3GroupBox" name="GroupBox5" >
-     <property name="title" >
+    <widget class="QGroupBox" name="GroupBox5">
+     <property name="title">
       <string>Conditions</string>
      </property>
-     <layout class="QVBoxLayout" >
-      <property name="spacing" >
-       <number>6</number>
-      </property>
-      <property name="margin" >
+     <layout class="QVBoxLayout">
+      <property name="margin">
        <number>11</number>
       </property>
       <item>
-       <widget class="QLabel" name="lblGender" >
-        <property name="text" >
+       <widget class="QLabel" name="lblGender">
+        <property name="text">
          <string>Gender:</string>
         </property>
-        <property name="wordWrap" >
+        <property name="wordWrap">
          <bool>false</bool>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QComboBox" name="cmbGender" />
+       <widget class="QComboBox" name="cmbGender"/>
       </item>
       <item>
-       <widget class="QLabel" name="lblAge" >
-        <property name="text" >
+       <widget class="QLabel" name="lblAge">
+        <property name="text">
          <string>Age:</string>
         </property>
-        <property name="wordWrap" >
+        <property name="wordWrap">
          <bool>false</bool>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QComboBox" name="cmbAge" />
+       <widget class="QComboBox" name="cmbAge"/>
       </item>
      </layout>
     </widget>
    </item>
    <item>
-    <spacer name="Spacer2" >
-     <property name="orientation" >
+    <spacer name="Spacer2">
+     <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
-     <property name="sizeType" >
+     <property name="sizeType">
       <enum>QSizePolicy::Expanding</enum>
      </property>
-     <property name="sizeHint" stdset="0" >
+     <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
        <height>20</height>
@@ -132,14 +118,6 @@
    </item>
   </layout>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>Q3GroupBox</class>
-   <extends>QGroupBox</extends>
-   <header>Qt3Support/Q3GroupBox</header>
-   <container>1</container>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
